discussion/kv_engine/147744/147744_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-41257: Reset vbucket to avoid bad state of PDM

Harden rollback for a rare case where the rollback of persisted seqnos
succeed but loadPreparedSyncWrites() fails. In this case We should
reset the vbucket and re-stream from seqno 0. Otherwise we will have
rolled back to the rollback seqno but may not have correctly loaded
prepares from disk which could cause us to be an inconsistent state
with the DCP producer.

This patch also makes another modification to log if the call to
doRollback() fails. The patch also adds a unittest using GMOCK to fail
the call to loadPreparedSyncWrites() due to a read error. Thus, ensuring
that we roll back to zero when loadPreparedSyncWrites() fails.

Change-Id: I15e53673c15dd64fe659ec649a1e187f4585a982

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-03-09 13:39:26.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2021-03-09 13:40:08.000000000
Message: 
Patch Set 2:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-09 13:47:27.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34130/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34130/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29316/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29316/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7524/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:6791:76: error: too many arguments to function call, expected single argument "ops", have 2 arguments [clang-diagnostic-error]
    replaceCouchKVStore(dynamic_cast<CouchKVStoreConfig&>(nonConstConfig), ops);
                                                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/kv_bucket_test.h:252:5: note: "replaceCouchKVStore" declared here
    void replaceCouchKVStore(FileOpsInterface& ops);
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7524/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:6791:76:
error: too many arguments to function call, expected single argument "ops", have 2 arguments [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7524/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8197/ : FAILURE

Compile error at [2021-03-09T13:44:31.185Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:6791:76:
error: too many arguments to function call, expected single argument "ops", have 2 arguments
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8197/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9493/ : FAILURE

Compile error at [2021-03-09T13:44:51.695Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:6791:76:
error: too many arguments to function call, expected single argument "ops", have 2 arguments
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9493/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9139/ : FAILURE

Compile error at [2021-03-09T13:41:56.270Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:6791:79:
error: no matching function for call to ?STParamCouchstoreBucketTest_RollBackToZeroAfterOnDiskPrepareReadFailure_Test::replaceCouchKVStore(CouchKVStoreConfig&, testing::NiceMock<MockOps>&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9139/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17041/ : FAILURE

Compile error at [2021-03-09T13:44:58.120Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:6791:76:
error: too many arguments to function call, expected single argument "ops", have 2 arguments
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17041/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9281/ : FAILURE

Compile error at [2021-03-09T13:43:15.898Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:6791:79:
error: no matching function for call to ?STParamCouchstoreBucketTest_RollBackToZeroAfterOnDiskPrepareReadFailure_Test::replaceCouchKVStore(CouchKVStoreConfig&, testing::NiceMock<MockOps>&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9281/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6062/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
